test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-shared-from-oknil-unmanaged.good
init-field-dflt-oknil-shared-from-oknil-unmanaged.chpl:8: error: Cannot initialize 'lhs' of type shared MyClass? from a 'unmanaged MyClass?'
